feat: Complete Week 5 Account Management Enhancements
- Added header partial updates to show "My Account" or "Logout" based on login state
- Implemented JWT-based authentication and authorization middleware
- Created account management and update views with conditional greetings and inventory links
- Added routes and controller functions to handle account info and password updates
- Updated account model with getAccountById, updateAccount, and updatePassword functions using prepared statements
- Implemented logout route that clears JWT cookie
- Added client- and server-side validation for account updates and password changes
- Tested login, header, account management, update, and logout functionality

--- a/views/account/update-account.ejs
+++ b/views/account/update-account.ejs
@@ -1,26 +1,27 @@
-<!-- views/account/update-account.ejs -->
 <h1>Update Account</h1>
 
-<% if (errors) { %>
-  <ul>
-    <% errors.forEach(error => { %>
-      <li class="error"><%= error %></li>
-    <% }) %>
-  </ul>
+<% if (errors && errors.length > 0) { %>
+    <ul class="errors">
+        <% errors.forEach(err => { %>
+            <li><%= err %></li>
+        <% }) %>
+    </ul>
 <% } %>
 
-<form action="/account/update" method="POST">
-  <input type="hidden" name="account_id" value="<%= account.account_id %>">
-  <label>First Name: <input type="text" name="firstname" value="<%= account.firstname %>" required></label>
-  <label>Last Name: <input type="text" name="lastname" value="<%= account.lastname %>" required></label>
-  <label>Email: <input type="email" name="email" value="<%= account.email %>" required></label>
-  <input type="submit" value="Update Account">
+<form method="POST" action="/account/update">
+    <input type="hidden" name="account_id" value="<%= account.account_id %>">
+    <label>First Name:</label>
+    <input type="text" name="firstname" value="<%= account.firstname %>" required>
+    <label>Last Name:</label>
+    <input type="text" name="lastname" value="<%= account.lastname %>" required>
+    <label>Email:</label>
+    <input type="email" name="email" value="<%= account.email %>" required>
+    <input type="submit" value="Update Account">
 </form>
 
-<h2>Change Password</h2>
-<form action="/account/password" method="POST">
-  <input type="hidden" name="account_id" value="<%= account.account_id %>">
-  <label>New Password: <input type="password" name="password" required></label>
-  <p>Password must be at least 8 characters.</p>
-  <input type="submit" value="Change Password">
+<form method="POST" action="/account/update-password">
+    <input type="hidden" name="account_id" value="<%= account.account_id %>">
+    <label>New Password:</label>
+    <input type="password" name="password" placeholder="At least 8 characters" required>
+    <input type="submit" value="Change Password">
 </form>
