fix: complete Week 5 account management and auth functionality
- Added JWT-based authentication and Employee/Admin authorization middleware
- Updated header partial to show conditional links based on login state
- Created account management view with proper greetings and inventory links
- Implemented account update and password update forms with server-side validation
- Added logout route to clear JWT cookie
- Refactored account model to use prepared statements and bcrypt hashing
- Configured database connection to use Render PostgreSQL with SSL

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,10 @@
 <nav>
-    <ul>
-        <% if (locals.accountData) { %>
-            <li><a href="/account/manage">Welcome <%= locals.accountData.firstname %></a></li>
-            <li><a href="/logout">Logout</a></li>
-        <% } else { %>
-            <li><a href="/account/login">My Account</a></li>
-        <% } %>
-    </ul>
+  <ul>
+    <% if (locals.account) { %>
+      <li><a href="/account/manage">Welcome <%= account.firstname %></a></li>
+      <li><a href="/logout">Logout</a></li>
+    <% } else { %>
+      <li><a href="/login">My Account</a></li>
+    <% } %>
+  </ul>
 </nav>
